syntax = "proto3";

package permission.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 权限组管理服务
service PermissionGroupService {
  // 查询权限组列表
  rpc List (pagination.PagingRequest) returns (ListPermissionGroupResponse) {}

  // 统计权限组数量
  rpc Count (pagination.PagingRequest) returns (CountPermissionGroupResponse) {}

  // 查询权限组详情
  rpc Get (GetPermissionGroupRequest) returns (PermissionGroup) {}

  // 创建权限组
  rpc Create (CreatePermissionGroupRequest) returns (google.protobuf.Empty) {}

  // 更新权限组
  rpc Update (UpdatePermissionGroupRequest) returns (google.protobuf.Empty) {}

  // 删除权限组
  rpc Delete (DeletePermissionGroupRequest) returns (google.protobuf.Empty) {}
}

// 权限组
message PermissionGroup {
  // 状态
  enum Status {
    OFF = 0;         // 禁用
    ON = 1;          // 启用
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = { description: "权限组ID" }
  ]; // 权限组ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = { description: "分组名称（如：用户管理、订单操作）" }
  ]; // 分组名称（如：用户管理、订单操作）

  optional string path = 3 [
    json_name = "path",
    (gnostic.openapi.v3.property) = {description: "树形路径，格式：/1/10/101/（包含自身且首尾带/）"}
  ];  // 树形路径，格式：/1/10/101/（包含自身且首尾带/）

  optional string module = 4 [
    json_name = "module",
    (gnostic.openapi.v3.property) = { description: "业务模块标识（如：opm、order、pay）" }
  ]; // 业务模块标识（如：opm、order、pay）

  optional uint32 sort_order = 5 [
    json_name = "sortOrder",
    (gnostic.openapi.v3.property) = { description: "排序值（越小越靠前）" }
  ]; // 排序值（越小越靠前）

  optional Status status = 6 [(gnostic.openapi.v3.property) = {description: "状态"}]; // 状态

  optional string description = 7 [
    json_name = "description",
    (gnostic.openapi.v3.property) = { description: "描述" }
  ]; // 描述

  optional uint32 parent_id = 50 [json_name = "parentId", (gnostic.openapi.v3.property) = {description: "父节点ID"}];  // 父节点ID
  repeated PermissionGroup children = 51 [json_name = "children", (gnostic.openapi.v3.property) = {description: "子节点树"}];  // 子节点树

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 查询列表 - 回应
message ListPermissionGroupResponse {
  repeated PermissionGroup items = 1;
  uint64 total = 2;
}

// 查询 - 请求
message GetPermissionGroupRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建 - 请求
message CreatePermissionGroupRequest {
  PermissionGroup data = 1;
}

// 更新 - 请求
message UpdatePermissionGroupRequest {
  uint32 id = 1;

  PermissionGroup data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除 - 请求
message DeletePermissionGroupRequest {
  uint32 id = 1;
}

message CountPermissionGroupResponse {
  uint64 count = 1;
}
